Fixed Some Footer alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -306,9 +306,8 @@ a:active { text-decoration: none; }
     .footer__visitor{
         display: flex;
         justify-content: flex-start;
-        gap: 10px;
+        gap: 0.4vw;
         align-items: center;
-        margin-left: 7.5%;
     }
     .footer__visitor img{
         height: 10px;
@@ -335,10 +334,10 @@ a:active { text-decoration: none; }
     }
     .footer__working {
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
-        gap: 10px;
-        margin-left: 7.5%;
+    justify-content: flex-start;
+    gap: 0.4vw;
+    align-items: center;
+    margin-top: 20px;
 
     }
     .footer__working > h1{
@@ -367,14 +366,6 @@ a:active { text-decoration: none; }
     
         color: #AFAFAF;
     }
-    .footer__vector {
-        position: relative;
-        width: 100%;
-        top: -20px;
-        left: 0px;
-        padding-left: 0px;
-        content: url('../../assets/footer/footerline.png');
-    }
     .footer__header plaintext {
         font-family: 'FuturaPT-Bold', sans-serif;
         font-style: normal;
@@ -392,15 +383,14 @@ a:active { text-decoration: none; }
     .form__signup {
         justify-content: center;
         align-items: center;
-        width: 30%;
+        width: 100%;
         height: 30px;
-        min-width: 200px;
-        margin-left: 7.5%;
-        margin-right: auto;
+        min-width: 150px;
+        margin-top: 20px;
         
     }
     .form__signup input {
-        width: 60%;
+        width: 30%;
         font-size: 10px;
         
     }     
@@ -417,7 +407,7 @@ a:active { text-decoration: none; }
         flex-direction: column;
         gap: 10vh;
         margin-right: auto;
-        margin-left: 7.5%;
+        margin-left: auto;
     } 
     .footer__main img {
         height: 50px;
@@ -521,7 +511,7 @@ a:active { text-decoration: none; }
     .footer__social {
         display: flex;
         width: 100%;
-        justify-content: flex-start;
+        justify-content: center;
         align-items: center;
         gap: 15px;
     }
@@ -547,7 +537,7 @@ a:active { text-decoration: none; }
         color: #AFAFAF;
     }
     .footer {
-        margin-left: 7%;
+        margin: 0 auto;
     }
 } 
 
